# qa_framework_2025

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml  cleanup-reports.yml  post-report.yml
reports/: report.json
reports/archive/: 2025-11-10T16-23-51Z-19238429271.json  2025-11-10T16-30-38Z-19238613473.json  2025-11-10T16-37-38Z-19238817830.json  2025-11-10T16-47-13Z-19239097996.json  2025-12-02T16-05-41Z-19865133987.json  2025-12-02T16-22-59Z-19865665712.json  2025-12-02T16-39-37Z-19865932533.json  2025-12-02T16-50-21Z-19866451865.json  2025-12-04T16-45-51Z-19936635124.json  2025-12-04T16-51-21Z-19936793815.json  2025-12-04T17-05-43Z-19937246714.json
src/config/: __init__.py  constants.py  settings.py
src/dashboards/: pytest_streamlit_dashboard.py
tests/api/: conftest.py  test_api.py
tests/ui/: conftest.py  test_login.py
